--- a/css/style.css
+++ b/css/style.css
@@ -485,6 +485,13 @@ background-color: white;
 	width: 35%;
 	height: 750px;
 }
+.alltextt{
+	color: #d0d0d0;
+	opacity: 0.23;
+	font-size: 420px;
+	position: absolute;
+	font-family: "Proxima Nova";
+}
 .cont_header{
 	width: 100%;
 	display: flex;
